# web_scraping

./: Django_practice.py  README.md  indeed.py  jobs.csv  main.py  pyproject.toml  save.py  so.py
